Definiciones de bloques
Se han modificado y creado archivos nuevos para determinar la estructura de la página.

--- a/css/cabecera/cabecera.css
+++ b/css/cabecera/cabecera.css
@@ -1,7 +1,6 @@
 /* Colorea todo el fondo de azul.*/
-* {
-    background-color: blue;
-    width: 100%;
+#cabecera {
+    background-color: rgba(10, 10, 231, 0.747);
     height: 80px;
-    size: 80px;
+    color: white;
 }
